TD, TH, COLGROUP, COL: Correct the fallback value when out-of-range value is set via rowSpan, colSpan, span IDL setters.

Their default values are 1, not 0.

https://html.spec.whatwg.org/multipage/tables.html#dom-colgroup-span
https://html.spec.whatwg.org/multipage/tables.html#dom-col-span
https://html.spec.whatwg.org/multipage/tables.html#dom-tdth-colspan
https://html.spec.whatwg.org/multipage/tables.html#dom-tdth-rowspan
> ... content attribute. It is clamped to the range [...], and its default value is 1.

https://html.spec.whatwg.org/multipage/common-dom-interfaces.html#clamped-to-the-range
> On setting, it behaves the same as setting a regular reflected unsigned integer.

https://html.spec.whatwg.org/multipage/common-dom-interfaces.html#reflecting-content-attributes-in-idl-attributes:idl-unsigned-long
> On setting, first, if the new value is in the range 0 to 2147483647, then let
> n be the new value, otherwise let n be the default value, or ...

Bug: 745376
Change-Id: Ibac4d9a7e79c51064a073419e1695f851f7a9df9