third_party/WebKit/Source/core/html/HTMLTableCellElement.cpp
@@ -38,6 +38,11 @@ namespace blink {
 
 using namespace HTMLNames;
 
+namespace {
+const unsigned kDefaultColSpan = 1;
+const unsigned kDefaultRowSpan = 1;
+}  // namespace
+
 inline HTMLTableCellElement::HTMLTableCellElement(const QualifiedName& tag_name,
                                                   Document& document)
     : HTMLTablePartElement(tag_name, document) {}
@@ -49,7 +54,7 @@ unsigned HTMLTableCellElement::colSpan() const {
   unsigned value = 0;
   if (col_span_value.IsEmpty() ||
       !ParseHTMLNonNegativeInteger(col_span_value, value))
-    return 1;
+    return kDefaultColSpan;
   // Counting for https://github.com/whatwg/html/issues/1198
   UseCounter::Count(GetDocument(), WebFeature::kHTMLTableCellElementColspan);
   if (value > 8190) {
@@ -67,7 +72,7 @@ unsigned HTMLTableCellElement::rowSpan() const {
   unsigned value = 0;
   if (row_span_value.IsEmpty() ||
       !ParseHTMLNonNegativeInteger(row_span_value, value))
-    return 1;
+    return kDefaultRowSpan;
   return std::max(1u, std::min(value, MaxRowSpan()));
 }
 
@@ -160,7 +165,7 @@ const AtomicString& HTMLTableCellElement::Axis() const {
 }
 
 void HTMLTableCellElement::setColSpan(unsigned n) {
-  SetUnsignedIntegralAttribute(colspanAttr, n);
+  SetUnsignedIntegralAttribute(colspanAttr, n, kDefaultColSpan);
 }
 
 const AtomicString& HTMLTableCellElement::Headers() const {
@@ -168,7 +173,7 @@ const AtomicString& HTMLTableCellElement::Headers() const {
 }
 
 void HTMLTableCellElement::setRowSpan(unsigned n) {
-  SetUnsignedIntegralAttribute(rowspanAttr, n);
+  SetUnsignedIntegralAttribute(rowspanAttr, n, kDefaultRowSpan);
 }
 
 }  // namespace blink
